--- a/TrafficLights/Base.lproj/Main.storyboard
+++ b/TrafficLights/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,14 +13,41 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLights" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Li-zH-4b1">
+                                <rect key="frame" x="143" y="77" width="104" height="104"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="750" constant="100" id="9lX-M9-kJT"/>
+                                    <constraint firstAttribute="width" priority="750" constant="100" id="KiL-dt-qqa"/>
+                                    <constraint firstAttribute="width" secondItem="6Li-zH-4b1" secondAttribute="height" multiplier="1:1" id="vnk-1z-2Dm"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CgG-fd-AlO">
+                                <rect key="frame" x="143" y="229" width="104" height="104"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" priority="750" constant="100" id="175-gu-xdx"/>
+                                    <constraint firstAttribute="height" priority="750" constant="100" id="3MG-ex-08R"/>
+                                    <constraint firstAttribute="width" secondItem="CgG-fd-AlO" secondAttribute="height" multiplier="1:1" id="RJd-kN-9dr"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0oG-1v-Bar">
+                                <rect key="frame" x="143" y="381" width="104" height="103.66666666666669"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="0oG-1v-Bar" secondAttribute="height" multiplier="1:1" id="6SL-77-Hif"/>
+                                    <constraint firstAttribute="width" priority="750" constant="100" id="Etd-ZU-6yC"/>
+                                    <constraint firstAttribute="height" priority="750" constant="100" id="FYE-1y-1YF"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MK0-pP-G4R">
-                                <rect key="frame" x="124.5" y="664" width="165" height="54"/>
+                                <rect key="frame" x="120" y="580.66666666666663" width="150" height="54"/>
                                 <color key="backgroundColor" systemColor="linkColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="165" id="dQA-HI-of6"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="RiA-4g-Yhd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -31,36 +58,21 @@
                                     <action selector="startButtonPress" destination="BYZ-38-t0r" eventType="touchUpInside" id="F0W-KC-wn7"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Li-zH-4b1">
-                                <rect key="frame" x="137" y="77" width="140" height="140"/>
-                                <color key="backgroundColor" systemColor="systemRedColor"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CgG-fd-AlO">
-                                <rect key="frame" x="137" y="253" width="140" height="140"/>
-                                <color key="backgroundColor" systemColor="systemYellowColor"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0oG-1v-Bar">
-                                <rect key="frame" x="137" y="429" width="140" height="140"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
-                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="0oG-1v-Bar" firstAttribute="top" secondItem="CgG-fd-AlO" secondAttribute="bottom" constant="36" id="4c9-DZ-5J1"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6Li-zH-4b1" secondAttribute="trailing" constant="137" id="AI6-u7-aSD"/>
-                            <constraint firstItem="CgG-fd-AlO" firstAttribute="top" secondItem="6Li-zH-4b1" secondAttribute="bottom" constant="36" id="EL2-41-h8c"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MK0-pP-G4R" secondAttribute="bottom" constant="144" id="FTR-ye-N5q"/>
-                            <constraint firstItem="6Li-zH-4b1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="33" id="RAF-0U-9Ti"/>
-                            <constraint firstItem="MK0-pP-G4R" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="WM2-Bb-b5M"/>
-                            <constraint firstItem="CgG-fd-AlO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="137" id="YdI-7H-HXW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0oG-1v-Bar" secondAttribute="trailing" constant="137" id="Ztn-kT-9oI"/>
-                            <constraint firstItem="CgG-fd-AlO" firstAttribute="height" secondItem="6Li-zH-4b1" secondAttribute="height" id="enY-Hi-yxX"/>
-                            <constraint firstItem="0oG-1v-Bar" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="137" id="jBA-AZ-JD1"/>
-                            <constraint firstItem="0oG-1v-Bar" firstAttribute="height" secondItem="CgG-fd-AlO" secondAttribute="height" id="jPr-sY-EUO"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0oG-1v-Bar" secondAttribute="bottom" constant="293" id="mXg-ze-nfJ"/>
-                            <constraint firstItem="6Li-zH-4b1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="137" id="qCh-EU-EkI"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CgG-fd-AlO" secondAttribute="trailing" constant="137" id="yP8-ky-8Xq"/>
+                            <constraint firstItem="6Li-zH-4b1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2Gl-ZE-gVF"/>
+                            <constraint firstItem="CgG-fd-AlO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BuA-YW-RxA"/>
+                            <constraint firstItem="6Li-zH-4b1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="33" id="KTk-Fj-vjm"/>
+                            <constraint firstItem="CgG-fd-AlO" firstAttribute="top" secondItem="6Li-zH-4b1" secondAttribute="bottom" constant="48" id="TGI-4T-Uqh"/>
+                            <constraint firstItem="6Li-zH-4b1" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="25:203" id="WGc-ZS-8xF"/>
+                            <constraint firstItem="MK0-pP-G4R" firstAttribute="top" secondItem="0oG-1v-Bar" secondAttribute="bottom" constant="96" id="bBx-Pt-aOB"/>
+                            <constraint firstItem="0oG-1v-Bar" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="25:203" id="eyC-Fk-MSY"/>
+                            <constraint firstItem="MK0-pP-G4R" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="p40-Tf-TwP"/>
+                            <constraint firstItem="0oG-1v-Bar" firstAttribute="top" secondItem="CgG-fd-AlO" secondAttribute="bottom" constant="48" id="qI6-hv-1CG"/>
+                            <constraint firstItem="CgG-fd-AlO" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="25:203" id="t7H-J3-t9O"/>
+                            <constraint firstItem="0oG-1v-Bar" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tyJ-dU-PPW"/>
                         </constraints>
                     </view>
                     <connections>
